load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_binary")
load("test_toolchain.bzl", "test_cc_toolchain_config")

platform(
    name = "platform_x86",
    constraint_values = [
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "platform_x64",
    constraint_values = [
        "@platforms//cpu:x86_64",
    ],
)

test_cc_toolchain_config(
    name = "test_cc_toolchain_config",
)

filegroup(name = "empty", srcs = []) 
cc_toolchain(
    name = "test_cc_toolchain",
    toolchain_identifier = "test_cc_toolchain",
    toolchain_config = ":test_cc_toolchain_config",

    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    coverage_files = ":empty",
    dwp_files = ":empty",
    dynamic_runtime_lib = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    static_runtime_lib = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

toolchain(
    name = "test_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_32",
    ],
    toolchain = "test_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)


cc_binary(
    name = "hello-world",
    srcs = ["hello-world.cpp"],
)
